nginx fix. Should be on server not container

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,19 +1,14 @@
-version: '3.3'
+version: "3.3"
 services:
-  nginx: 
-    build: ./nginx
-    ports:
-      - "80:80"
-      - "443:443"
   mongo:
     image: mongo:4.2.5
     ports:
-      - '27017:27017'
+      - "27017:27017"
   app:
     build: .
-    environment: 
+    environment:
       WAIT_HOSTS: mongo:27017
     ports:
-      - '8080:8080'
+      - "8080:8080"
     depends_on:
       - mongo
